--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header class=" p-5">
 
         <nav class="container d-flex justify-content-between align-items-center">
-            <img src="img/logo.png" class="nav-img " loading="lazy">
+            <img src="img/Logodesenho2.webp" class="nav-img " loading="lazy">
             <ul class="nav mt-5">
                 <li class="nav-item"><a class="nav-link" href="#inicio">Início</a></li>
                 <li class="nav-item"><a class="nav-link" href="#galeria">Galeria</a></li>
@@ -41,32 +41,24 @@
         <section id="inicio" class="my-5">
             <div class="inicio-fundo d-flex justify-content-between align-items-center">
                 <div class="esquerda-conteudo">
-                    <h1 class="display-4 text-white fst-italic fw-bold">Boas-vindas a</h1>
-                    <img src="img/logo-2.png" class="mb-3" width="563" height="278" loading="lazy">
+                    <h1 class="display-4 text-white fst-italic fw-bold">Boas-vindas</h1>
+                    <img src="img/querfeijao.jpg" class="mb-3" width="680" height="280" loading="lazy">
                     <a href="#tropicalia" class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero
                         conhecer!</a>
-                </div>
-                <img src="img/falcao-futsal.webp"
-                    alt="A imagem apresenta um esporte chamado de Futsal"
-                    title="Os Campeões - CC0 Domínio Público / Acervo Arquivo Nacional" class="img-fluid img-inicio">
-
-            </div>
         </section>
 
-        <section id="FUTSAL" class="my-5 pt-6 secao-futsal">
+        <section id="tropicalia" class="my-5 pt-6 secao-tropicalia">
             <div class="container d-flex align-items-center ">
                 <div class="col-4 d-flex justify-content-center ">
-                    <img src="img/facao.jpg" class="rounded-pill" width="273" height="331" loading="lazy">
+                    <img src="img/logodesenho].jpg" class="rounded-pill" width="273" height="331" loading="lazy">
                 </div>
                 <div class="col-5">
-                    <h2>O que é Futsal?</h2>
-                    <p class="p-2">O futsal é um esporte derivado do futebol, 
-                        em que duas equipes de cinco jogadores possuem o objetivo de marcar gols. 
-                        O futsal é um esporte praticado em quadra com cinco jogadores em cada time. 
-                        Na modalidade, também chamada de futebol de salão, 
-                        as equipes têm o objetivo de marcar gols na baliza dos oponentes.
-
-                    </p>
+                    <h2>Quem criou as animações?</h2>
+                    <p class="p-2">Walter Benjamin Lantz (New Rochelle,
+                         27 de abril de 1899 — Burbank, 22 de março de 1994) foi um desenhista,
+                         animador e dublador estadunidense.
+                         Conhecido principalmente pela fundação do Walter Lantz Studio e pela criação
+                          do personagem Woody Woodpecker (Pica-Pau).</p>
                 </div>
             </div>
         </section>
@@ -77,21 +69,21 @@
 
                 <div class="row justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="img/COMEMORAÇÃO.webp"
+                        <img src="img/pica-pau-gasolina.webp"
                             class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
-                        <img src="img/Futebol_Salao_Pan2007.jpg" class="img-fluid rounded-5"
+                        <img src="img/pica-pauluz.jpg" class="img-fluid rounded-5"
                             loading="lazy">
                     </div>
                 </div>
                 <div class="row mt-4  justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="img/CAMPEAO.jpg" class="img-fluid rounded-5"
+                        <img src="img/pica-pau.jpg" class="img-fluid rounded-5"
                             loading="lazy">
                     </div>
                     <div class="col-md-4">
-                        <img src="img/brasil.avif"
+                        <img src="img/podepassar.jpg"
                             class="img-fluid rounded-5" loading="lazy">
                     </div>
                 </div>
